--- a/dotnet-react-app/ClientApp/css/site.css
+++ b/dotnet-react-app/ClientApp/css/site.css
@@ -8,16 +8,16 @@
 }
 
 #btn-menu {
-    margin: 5% 20%;
+    padding: 3% 20% 1% 20%;
     display: flex;
-    justify-content: center;
-    font-size: 1.8rem;
+    justify-content: flex-end;
+    font-size: 1.4rem;
 }
 
 .table {
-    margin: 5% 20% 2% 20%;
+    padding: 0 20%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     font-size: 1.4rem;
 }
 
