--- a/dotnet-react-app/ClientApp/css/site.css
+++ b/dotnet-react-app/ClientApp/css/site.css
@@ -8,7 +8,7 @@
 }
 
 #btn-menu {
-    padding: 3% 20% 1% 20%;
+    padding: 3% 0;
     display: flex;
     justify-content: flex-end;
     font-size: 1.4rem;
@@ -19,6 +19,10 @@
     display: flex;
     justify-content: center;
     font-size: 1.4rem;
+}
+
+table, div.table div{
+    width: 100%;
 }
 
 th, td{
